Disable multicursor in block selection mode

The two are mutually exclusive.

BUG: 451542